syntax = "proto3";

package recordgetter;

import "github.com/brotherlogic/recordcollection/proto/recordcollection.proto";

message Empty {}

message State {
  recordcollection.Record current_pick = 1;
}

message GetRecordRequest {
  bool refresh = 1;
}

message GetRecordResponse {
  recordcollection.Record record = 1;
  int32 num_listens = 2;
}

service RecordGetter {
  rpc GetRecord(GetRecordRequest) returns (GetRecordResponse);
  rpc Listened(recordcollection.Record) returns (Empty);
  rpc Force(Empty) returns (Empty);
}
